// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/GlobalSetting ce render snap 1`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            全局配置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  操作记录过期时间(小时)
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                -
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-1uxy5k6"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  CB工作台操作审计过期时间(小时)
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                -
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-1uxy5k6"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  URL地址前缀
                </div>
                <div
                  class="tips"
                >
                  配置能访问SQLE的url地址信息
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                -
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-1uxy5k6"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/GlobalSetting ce render snap 2`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            全局配置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  操作记录过期时间(小时)
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                3161
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-1uxy5k6"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  CB工作台操作审计过期时间(小时)
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                2160
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-1uxy5k6"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  URL地址前缀
                </div>
                <div
                  class="tips"
                >
                  配置能访问SQLE的url地址信息
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                http://demo.com
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-1uxy5k6"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
